tests/flat_file/ui/auto_plugin_missing_param.stderr
error: auto_plugin requires a function taking at least one named parameter
 --> tests/flat_file/ui/auto_plugin_missing_param.rs:4:1
  |
4 | fn plugin() {}
  | ^^
